--- a/index.html
+++ b/index.html
@@ -11,7 +11,132 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    
+    <div class="container">
+        <!-- Navbar -->
+        <div class="row">
+            <div class="col">
+                <h1>climate.xchange</h1>
+            </div>
+            <div class="col">
+                <input type="text" placeholder="Search for a City">
+                <button>Magnifying Glass</button>
+            </div>
+        </div>
+        <!-- Navbar End -->
+
+        <br>
+        <!-- Main -->
+        <div class="row">
+            <div class="col border">
+                <div class="row">
+                    <div class="col">
+                        <h4>SAN FRANCISCO</h4>
+                    </div>
+                    <div class="col">
+                        <p>heart icon</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <p>weather icon</p>
+                    </div>
+                    <div class="col">
+                        <h2>54°F</h2>
+                    </div>
+                </div>
+
+                <hr>
+                <div class="row">
+                    <div class="col">
+                        <p>cloudy</p>
+                    </div>
+                    <div class="col">
+                        <p>H: 72°F L: 37°F</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col border">
+                <div class="row">
+                    <div class="col">
+                        <h4>TODAY</h4>
+                    </div>
+                    <div class="col">
+                        <p>12:55 PM</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <p>8am</p>
+                        <p>WI</p>
+                        <h2>38°</h2>
+                    </div>
+                    <div class="col">
+                        <p>12pm</p>
+                        <p>WI</p>
+                        <h2>54°</h2>
+                    </div>
+                    <div class="col">
+                        <p>7pm</p>
+                        <p>WI</p>
+                        <h2>39°</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 1st Row End -->
+
+        <br>
+        <div class="row">
+            <div class="col border">
+                <h5>TUE 12/8</h5>
+                <p>WI</p>
+                <p>74°F | 34°F</p>
+            </div>
+            <div class="col border">
+                <h5>WED 12/9</h5>
+                <p>WI</p>
+                <p>74°F | 34°F</p>
+            </div>
+            <div class="col border">
+                <h5>THU 12/10</h5>
+                <p>WI</p>
+                <p>74°F | 34°F</p>
+            </div>
+            <div class="col border">
+                <h5>FRI 12/11</h5>
+                <p>WI</p>
+                <p>74°F | 34°F</p>
+            </div>
+            <div class="col border">
+                <h5>SAT 12/12</h5>
+                <p>WI</p>
+                <p>74°F | 34°F</p>
+            </div>
+        </div>
+        <!-- 2nd Row End -->
+
+        <br>
+        <div class="row">
+            <button>HI Open Your Favorite Places</button>
+        </div>
+        <!-- 3rd Row End -->
+        <!-- Main End -->
+
+        <!-- Footer -->
+        <div class="row mt-5">
+            <div class="col">
+                <p>handcrafted by Joseph Racca</p>
+            </div>
+        </div>
+        <!-- Footer End -->
+
+    </div>
+
+
+
 
 
 
