--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <h1>climate.xchange</h1>
             </div>
             <div class="col">
-                <input type="text" placeholder="Search for a City">
-                <button>Magnifying Glass</button>
+                <input id="userSearch" type="text" placeholder="Search for a City">
+                <button id="searchBtn">Magnifying Glass</button>
             </div>
         </div>
         <!-- Navbar End -->
@@ -31,7 +31,7 @@
             <div class="col border">
                 <div class="row">
                     <div class="col">
-                        <h4>SAN FRANCISCO</h4>
+                        <h4 id="cityName">SAN FRANCISCO</h4>
                     </div>
                     <div class="col">
                         <p>heart icon</p>
@@ -40,20 +40,20 @@
 
                 <div class="row">
                     <div class="col">
-                        <p>weather icon</p>
+                        <p id="currentWeatherIcon">weather icon</p>
                     </div>
                     <div class="col">
-                        <h2>54°F</h2>
+                        <h2 id="currentTemp">54°F</h2>
                     </div>
                 </div>
 
                 <hr>
                 <div class="row">
                     <div class="col">
-                        <p>cloudy</p>
+                        <p id="currentDesc">cloudy</p>
                     </div>
                     <div class="col">
-                        <p>H: 72°F L: 37°F</p>
+                        <p id="currentHighLow">H: 72°F L: 37°F</p>
                     </div>
                 </div>
             </div>
@@ -63,25 +63,25 @@
                         <h4>TODAY</h4>
                     </div>
                     <div class="col">
-                        <p>12:55 PM</p>
+                        <p id="time">12:55 PM</p>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col">
                         <p>8am</p>
-                        <p>WI</p>
-                        <h2>38°</h2>
+                        <p id="morningIcon">WI</p>
+                        <h2 id="morningTemp">38°</h2>
                     </div>
                     <div class="col">
                         <p>12pm</p>
-                        <p>WI</p>
-                        <h2>54°</h2>
+                        <p id="afternoonIcon">WI</p>
+                        <h2 id="afternoonTemp">54°</h2>
                     </div>
                     <div class="col">
                         <p>7pm</p>
-                        <p>WI</p>
-                        <h2>39°</h2>
+                        <p id="nightIcon">WI</p>
+                        <h2 id="nightTemp">39°</h2>
                     </div>
                 </div>
             </div>
@@ -91,29 +91,29 @@
         <br>
         <div class="row">
             <div class="col border">
-                <h5>TUE 12/8</h5>
-                <p>WI</p>
-                <p>74°F | 34°F</p>
+                <h5 id="dateDayOne">TUE 12/8</h5>
+                <p id="dayOneIcon">WI</p>
+                <p id="dayOneHighLow">74°F | 34°F</p>
             </div>
             <div class="col border">
-                <h5>WED 12/9</h5>
-                <p>WI</p>
-                <p>74°F | 34°F</p>
+                <h5 id="dateDayTwo">WED 12/9</h5>
+                <p id="dayTwoIcon">WI</p>
+                <p id="dayTwoHighLow">74°F | 34°F</p>
             </div>
             <div class="col border">
-                <h5>THU 12/10</h5>
-                <p>WI</p>
-                <p>74°F | 34°F</p>
+                <h5 id="dateDayThree">THU 12/10</h5>
+                <p id="dayThreeIcon">WI</p>
+                <p id="dayThreeHighLow">74°F | 34°F</p>
             </div>
             <div class="col border">
-                <h5>FRI 12/11</h5>
-                <p>WI</p>
-                <p>74°F | 34°F</p>
+                <h5 id="dateDayFour">FRI 12/11</h5>
+                <p id="dayFourIcon">WI</p>
+                <p id="dayFourHighLow">74°F | 34°F</p>
             </div>
             <div class="col border">
-                <h5>SAT 12/12</h5>
-                <p>WI</p>
-                <p>74°F | 34°F</p>
+                <h5 id="dateDayFive">SAT 12/12</h5>
+                <p id="dayFiveIcon">WI</p>
+                <p id="dayFiveHighLow">74°F | 34°F</p>
             </div>
         </div>
         <!-- 2nd Row End -->
