--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p id="currentWeatherIcon">weather icon</p>
                     </div>
                     <div class="col">
-                        <h2 id="currentTemp">54°F</h2>
+                        <h2><span id="currentTemp">54</span>°F</h2>
                     </div>
                 </div>
 
@@ -53,7 +53,7 @@
                         <p id="currentDesc">cloudy</p>
                     </div>
                     <div class="col">
-                        <p id="currentHighLow">H: 72°F L: 37°F</p>
+                        <p>H: <span id="currentHigh">72</span>°F L: <span id="currentLow">37</span>°F</p>
                     </div>
                 </div>
             </div>
@@ -69,19 +69,19 @@
 
                 <div class="row">
                     <div class="col">
-                        <p>8am</p>
+                        <p>9am</p>
                         <p id="morningIcon">WI</p>
-                        <h2 id="morningTemp">38°</h2>
+                        <h2><span id="morningTemp">38</span>°</h2>
                     </div>
                     <div class="col">
                         <p>12pm</p>
                         <p id="afternoonIcon">WI</p>
-                        <h2 id="afternoonTemp">54°</h2>
+                        <h2><span id="afternoonTemp">54</span>°</h2>
                     </div>
                     <div class="col">
-                        <p>7pm</p>
+                        <p>6pm</p>
                         <p id="nightIcon">WI</p>
-                        <h2 id="nightTemp">39°</h2>
+                        <h2><span id="nightTemp">58</span>°</h2>
                     </div>
                 </div>
             </div>
@@ -93,27 +93,27 @@
             <div class="col border">
                 <h5 id="dateDayOne">TUE 12/8</h5>
                 <p id="dayOneIcon">WI</p>
-                <p id="dayOneHighLow">74°F | 34°F</p>
+                <p><span id="dayOneHigh">74</span>°F | <span id="dayOneLow">34</span>°F</p>
             </div>
             <div class="col border">
                 <h5 id="dateDayTwo">WED 12/9</h5>
                 <p id="dayTwoIcon">WI</p>
-                <p id="dayTwoHighLow">74°F | 34°F</p>
+                <p><span id="dayTwoHigh">74</span>°F | <span id="dayTwoLow">34</span>°F</p>
             </div>
             <div class="col border">
                 <h5 id="dateDayThree">THU 12/10</h5>
                 <p id="dayThreeIcon">WI</p>
-                <p id="dayThreeHighLow">74°F | 34°F</p>
+                <p><span id="dayThreeHigh">74</span>°F | <span id="dayThreeLow">34</span>°F</p>
             </div>
             <div class="col border">
                 <h5 id="dateDayFour">FRI 12/11</h5>
                 <p id="dayFourIcon">WI</p>
-                <p id="dayFourHighLow">74°F | 34°F</p>
+                <p><span id="dayFourHigh">74</span>°F | <span id="dayFourLow">34</span>°F</p>
             </div>
             <div class="col border">
                 <h5 id="dateDayFive">SAT 12/12</h5>
                 <p id="dayFiveIcon">WI</p>
-                <p id="dayFiveHighLow">74°F | 34°F</p>
+                <p><span id="dayFiveHigh">74</span>°F | <span id="dayFiveLow">34</span>°F</p>
             </div>
         </div>
         <!-- 2nd Row End -->
