--- a/index.html
+++ b/index.html
@@ -11,36 +11,39 @@
 </head>
 
 <body>
-    
-    <div class="container">
-        <!-- Navbar -->
-        <div class="row">
+
+
+    <!-- Navbar -->
+    <div class="container-fluid" style="background-color: white;">
+        <div class="row border d-flex align-items-center" style="padding-left: 10%; padding-right: 10%;">
             <div class="col">
                 <h1>climate.xchange</h1>
             </div>
             <div class="col">
                 <input id="userSearch" type="text" placeholder="Search for a City">
-                <button id="searchBtn">Magnifying Glass</button>
+                <button id="searchBtn"><img src="./assets/magnify.png" alt="search icon" style="height: 10px;"></button>
             </div>
         </div>
-        <!-- Navbar End -->
+    </div>
 
+    <!-- Navbar End -->
+    <div class="container">
         <br>
         <!-- Main -->
-        <div class="row">
+        <div class="row" style="background-color: white;">
             <div class="col border">
                 <div class="row">
                     <div class="col">
                         <h4 id="cityName">SAN FRANCISCO</h4>
                     </div>
                     <div class="col">
-                        <p>heart icon</p>
+                        <img src="./assets/heart.png" alt="heart icon" style="height: 20px;">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col">
-                        <p id="currentWeatherIcon">weather icon</p>
+                        <img id="currentWeatherIcon" src="" alt="weather icon" style="max-width: 50%;">
                     </div>
                     <div class="col">
                         <h2><span id="currentTemp">54</span>°F</h2>
@@ -89,7 +92,7 @@
         <!-- 1st Row End -->
 
         <br>
-        <div class="row">
+        <div class="row" style="background-color: white;">
             <div class="col border">
                 <h5 id="dateDayOne">TUE 12/8</h5>
                 <p id="dayOneIcon">WI</p>
@@ -119,16 +122,16 @@
         <!-- 2nd Row End -->
 
         <br>
-        <div class="row">
-            <button>HI Open Your Favorite Places</button>
+        <div class="row d-flex justify-content-center">
+            <button style="width: 40%;">HI Open Your Favorite Places</button>
         </div>
         <!-- 3rd Row End -->
         <!-- Main End -->
 
         <!-- Footer -->
-        <div class="row mt-5">
-            <div class="col">
-                <p>handcrafted by Joseph Racca</p>
+        <div class="row pt-5">
+            <div class="col text-center">
+                <p style="color: white;">handcrafted by Joseph Racca</p>
             </div>
         </div>
         <!-- Footer End -->
