--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
                 <div class="row">
                     <div class="col">
                         <p>9am</p>
-                        <p id="morningIcon">WI</p>
+                        <img id="morningIcon" src="" alt="weather icon" style="max-width: 50%;">
                         <h2><span id="morningTemp">38</span>°</h2>
                     </div>
                     <div class="col">
                         <p>12pm</p>
-                        <p id="afternoonIcon">WI</p>
+                        <img id="afternoonIcon" src="" alt="weather icon" style="max-width: 50%;">
                         <h2><span id="afternoonTemp">54</span>°</h2>
                     </div>
                     <div class="col">
                         <p>6pm</p>
-                        <p id="nightIcon">WI</p>
+                        <img id="nightIcon" src="" alt="weather icon" style="max-width: 50%;">
                         <h2><span id="nightTemp">58</span>°</h2>
                     </div>
                 </div>
@@ -95,27 +95,27 @@
         <div class="row" style="background-color: white;">
             <div class="col border">
                 <h5 id="dateDayOne">TUE 12/8</h5>
-                <p id="dayOneIcon">WI</p>
+                <img id="dayOneIcon" src="" alt="weather icon" style="max-width: 50%;">
                 <p><span id="dayOneHigh">74</span>°F | <span id="dayOneLow">34</span>°F</p>
             </div>
             <div class="col border">
                 <h5 id="dateDayTwo">WED 12/9</h5>
-                <p id="dayTwoIcon">WI</p>
+                <img id="dayTwoIcon" src="" alt="weather icon" style="max-width: 50%;">
                 <p><span id="dayTwoHigh">74</span>°F | <span id="dayTwoLow">34</span>°F</p>
             </div>
             <div class="col border">
                 <h5 id="dateDayThree">THU 12/10</h5>
-                <p id="dayThreeIcon">WI</p>
+                <img id="dayThreeIcon" src="" alt="weather icon" style="max-width: 50%;">
                 <p><span id="dayThreeHigh">74</span>°F | <span id="dayThreeLow">34</span>°F</p>
             </div>
             <div class="col border">
                 <h5 id="dateDayFour">FRI 12/11</h5>
-                <p id="dayFourIcon">WI</p>
+                <img id="dayFourIcon" src="" alt="weather icon" style="max-width: 50%;">
                 <p><span id="dayFourHigh">74</span>°F | <span id="dayFourLow">34</span>°F</p>
             </div>
             <div class="col border">
                 <h5 id="dateDayFive">SAT 12/12</h5>
-                <p id="dayFiveIcon">WI</p>
+                <img id="dayFiveIcon" src="" alt="weather icon" style="max-width: 50%;">
                 <p><span id="dayFiveHigh">74</span>°F | <span id="dayFiveLow">34</span>°F</p>
             </div>
         </div>
