--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         <br>
         <div class="row d-flex justify-content-center">
-            <button style="width: 40%;">HI Open Your Favorite Places</button>
+            <button style="width: 40%;"><img src="./assets/like.png" alt="heart icon" style="height: 20px;"> Open Your Favorite Places</button>
         </div>
         <!-- 3rd Row End -->
         <!-- Main End -->
