--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="col border">
                 <div class="row">
                     <div class="col">
-                        <h4 id="cityName">SAN FRANCISCO</h4>
+                        <h4 id="cityName">STOCKTON</h4>
                     </div>
                     <div class="col">
                         <img src="./assets/heart.png" alt="heart icon" style="height: 20px;">
@@ -72,7 +72,7 @@
 
                 <div class="row">
                     <div class="col">
-                        <p>9am</p>
+                        <p>8am</p>
                         <img id="morningIcon" src="" alt="weather icon" style="max-width: 50%;">
                         <h2><span id="morningTemp">38</span>°</h2>
                     </div>
@@ -82,7 +82,7 @@
                         <h2><span id="afternoonTemp">54</span>°</h2>
                     </div>
                     <div class="col">
-                        <p>6pm</p>
+                        <p>8pm</p>
                         <img id="nightIcon" src="" alt="weather icon" style="max-width: 50%;">
                         <h2><span id="nightTemp">58</span>°</h2>
                     </div>
