--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="col border">
                 <div class="row">
                     <div class="col">
-                        <h4 id="cityName">STOCKTON</h4>
+                        <h4 id="cityName">SAN FRANCISCO</h4>
                     </div>
                     <div class="col">
                         <img src="./assets/heart.png" alt="heart icon" style="height: 20px;">
