--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <h4 id="cityName" class="RobotoLightFont headerText">SAN FRANCISCO</h4>
                     </div>
                     <div class="col text-end pe-5">
-                        <img src="./assets/heart.png" alt="heart icon" style="height: 27px;">
+                        <div><img id="favoritesAddBtn" src="./assets/heart.png" alt="heart icon" style="height: 27px;"></div>
                     </div>
                 </div>
 
@@ -121,11 +121,11 @@
         <!-- 2nd Row End -->
     </div>
 
-        <br>
-        <div class="container d-flex justify-content-center">
-                <p id="favoritesBtn" class="my-0 text-center d-flex align-items-center favoritesBtnS bgTransparent RobotoRegularFont"><span class="heart-text sp-icon-open"><img src="./assets/like.png" alt="heart icon" style="height: 20px;"> Open Your
+        <div id="favoritesBtn"  class="container pt-4 d-flex justify-content-center">
+                <p class="my-0 text-center d-flex align-items-center favoritesBtnS bgTransparent RobotoRegularFont"><span class="heart-text sp-icon-open"><img src="./assets/like.png" alt="heart icon" style="height: 20px;"> Open Your
                     Favorite Places</p>
         </div>
+        <div id="favoritesRemoveBtn" class="text-center pt-5"><p>Remove Favorites</p></div>
         <!-- 3rd Row End -->
         <!-- Main End -->
 
